; ModuleID = '/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjPlaneHeight.c'
source_filename = "/home/carl/AnghaBench/mozjpeg/extr_turbojpeg.c_tjPlaneHeight.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TJ_NUMSAMP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"tjPlaneHeight(): Invalid argument\00", align 1
@TJSAMP_GRAY = common dso_local global i32 0, align 4
@tjMCUHeight = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tjPlaneHeight(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %9, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp slt i32 %10, 1
  br i1 %11, label %19, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %19, label %15

15:                                               ; preds = %12
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* @TJ_NUMSAMP, align 4
  %18 = icmp sge i32 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %15, %12, %3
  %20 = call i32 @_throwg(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %21

21:                                               ; preds = %19, %15
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* @TJSAMP_GRAY, align 4
  %24 = icmp eq i32 %22, %23
  %25 = zext i1 %24 to i64
  %26 = select i1 %24, i32 1, i32 3
  store i32 %26, i32* %8, align 4
  %27 = load i32, i32* %4, align 4
  %28 = icmp slt i32 %27, 0
  br i1 %28, label %33, label %29

29:                                               ; preds = %21
  %30 = load i32, i32* %4, align 4
  %31 = load i32, i32* %8, align 4
  %32 = icmp sge i32 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %29, %21
  %34 = call i32 @_throwg(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  br label %35

35:                                               ; preds = %33, %29
  %36 = load i32, i32* %5, align 4
  %37 = load i32*, i32** @tjMCUHeight, align 8
  %38 = load i32, i32* %6, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  %41 = load i32, i32* %40, align 4
  %42 = sdiv i32 %41, 8
  %43 = call i32 @PAD(i32 %36, i32 %42)
  store i32 %43, i32* %7, align 4
  %44 = load i32, i32* %4, align 4
  %45 = icmp eq i32 %44, 0
  br i1 %45, label %46, label %48

46:                                               ; preds = %35
  %47 = load i32, i32* %7, align 4
  store i32 %47, i32* %9, align 4
  br label %57

48:                                               ; preds = %35
  %49 = load i32, i32* %7, align 4
  %50 = mul nsw i32 %49, 8
  %51 = load i32*, i32** @tjMCUHeight, align 8
  %52 = load i32, i32* %6, align 4
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds i32, i32* %51, i64 %53
  %55 = load i32, i32* %54, align 4
  %56 = sdiv i32 %50, %55
  store i32 %56, i32* %9, align 4
  br label %57

57:                                               ; preds = %48, %46
  br label %58

58:                                               ; preds = %57
  %59 = load i32, i32* %9, align 4
  ret i32 %59
}

declare dso_local i32 @_throwg(i8*) #1

declare dso_local i32 @PAD(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
